# gpui_example

./: Cargo.toml  README.md
gin_server/: go.mod  go.sum  main.go
gin_server/api/: check_websocket_conn.go  register_websocket.go  router.go
gin_server/api/datastore/: data.go
gin_server/api/group/: create_group_chat.go  join_group_chat.go
gin_server/api/user/: search.go  user_login.go  user_message_group.go  user_send_message.go
gin_server/api/user_friend/: approval_user_add_friend.go  user_add_friend.go
gin_server/datastore/: datastore.go  sql.go
gin_server/entity/: group.go  search.go  user.go
gin_server/enum/: conts.go
gin_server/event_bus/: event_bus.go
gin_server/global/: cron.go  global.go
gin_server/internal/: internal.go
gui/: Cargo.toml
gui/src/: main.rs  state.rs
gui/src/component/: home.rs  login.rs  mod.rs
gui/src/component/friend_page/: mod.rs
gui/src/component/message_page/: create_group_chat_window.rs  entity.rs  group_chat_member.rs  history_message.rs  left_sidebar.rs  mod.rs  search_group_and_user_window.rs  send_message_entity.rs
gui/src/entity/: mod.rs  search_entity.rs
gui/src/left_nav/: mod.rs
gui/src/service/: http_request.rs  interfaces.rs  mod.rs
gui/src/top_nav/: mod.rs
