

[workspace]
members = [
    "gui",


]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

# 在这里统一管理依赖版本，子项目只需引用即可
[workspace.dependencies]
gpui = {version = "0.2.2"}
gpui-component = {version = "0.5.0"}
tokio = { version = "1.49.0", features = ["full"] }
axum = {version = "0.8.8"}
tower-http = {version = "0.6.8", features = ["full"] }
fern = "0.7.1"
log = {version = "0.4.29"}

serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.100"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = {version = "0.13.1", features = ["default-tls", "gzip"]}


