[package]
name = "gui"
version.workspace = true
edition.workspace = true


[dependencies]
gpui = {git = "https://github.com/zed-industries/zed"}
gpui-component = {git = "https://github.com/longbridge/gpui-component"}
reqwest_client = {git = "https://github.com/zed-industries/zed", package = "reqwest_client"}

log = {version = "0.4.29"}
chrono = {version = "0.4.43", features = ["default"]}
fern = "0.7.1"
reqwest = { version = "0.13.1", default-features = false, features = ["gzip", "json", "multipart", "form", "rustls", "stream"] }
serde = "1.0.228"
futures-core = "0.3.31"
tokio-util = "0.7.18"
anyhow = "1.0.100"
tokio = {version = "1.49.0", features = ["full"]}
tokio-tungstenite="0.28.0"
futures-util="0.3.31"
serde_json = "1.0.149"
rust-embed = "8.11.0"
uuid = { version = "1.19.0", features = ["v4"] }